mysql-blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-blog-svc
  namespace: blog
spec:
  selector:
    app: mysql-blog
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-blog-dp
  namespace: blog
  labels:
    app: mysql-blog
spec:
  selector:
    matchLabels:
      app: mysql-blog
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-blog
    spec:
      containers:
      - name: mysql-blog-container
        image: mysql:8.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi        
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-volume
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: mysql-blog-pvc
