ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-blog-ingress
  namespace: blog
spec:
  ingressClassName: nginx
  rules:
  - host: http://blog.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost-blog-svc
            port:
              number: 80
